# presign_prototype

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  client.py  docker-compose.yml  generate_public_private_key.py  generate_rsa_keys.py  presign.py  pyproject.toml  pyproject.toml.orig  server.py  test_file.txt
.github/workflows/: build.yml  deploy.yml  test.yml
client/: app.py  client.py  config.yaml.example  yaml.example
demo/: generate_public_private_key.py  jwt_client.py  jwt_server.py  submit.py
lib/: key_helper.py
scripts/: generate_rsa_keys.py
server/: Dockerfile  app.py  config.yaml.example  docker-compose.yml  pyproject.toml  server.py
server/server/: app.py  yaml.example
server/tests/: conftest.py  test_app.py
server/tests/server/: test_app.py
tests/client/: test_client.py
tests/lib/: test_key_helper.py
tests/server/: test_app.py
