[tool.poetry]
name = "presign-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.144"
requests = "^2.32.3"
rsa = "^4.9"
flask = "^3.0.3"
cryptography = "^42.0.8"
jwt = "^1.3.1"
python-jose = "^3.3.0"
ruff = "^0.5.2"
isort = "^5.13.2"
pyyaml = "^6.0.1"
coverage = "^7.6.0"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-flask = "^1.3.0"
bandit = "^1.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
